# parsec

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  appveyor.yml  tutorial.md
benches/: bench.rs
dev_utils/: Cargo.toml
dev_utils/src/: environment.rs  lib.rs  network.rs  peer.rs  schedule.rs
dev_utils/src/proptest/: environment.rs  schedule.rs
dot_gen/: Cargo.toml
dot_gen/src/: main.rs
examples/: basic.rs
input_graphs/benches/: dynamic.dot  minimal.dot  static.dot
input_graphs/functional_tests_add_peer/: alice.dot  carol.dot
input_graphs/functional_tests_handle_malice_accomplice/: carol.dot
input_graphs/functional_tests_handle_malice_duplicate_votes/: alice.dot
input_graphs/functional_tests_handle_malice_invalid_accusation/: alice.dot  carol.dot
input_graphs/functional_tests_handle_malice_invalid_gossip_creator/: alice.dot  bob.dot
input_graphs/functional_tests_handle_malice_stale_other_parent/: alice.dot  carol.dot
input_graphs/functional_tests_remove_peer/: alice.dot
input_graphs/functional_tests_unpolled_and_unconsensused_observations/: alice.dot
input_graphs/gossip_graph_tests_ancestors_iterator/: carol.dot
input_graphs/parsec_functional_tests_add_peer/: add_fred.dot  naughty_carol.dot
input_graphs/parsec_functional_tests_from_parsed_contents/: 0.dot  1.dot
input_graphs/parsec_functional_tests_handle_malice_accomplice/: alice.dot  bob.dot
input_graphs/parsec_functional_tests_handle_malice_duplicate_votes/: alice.dot  carol.dot
input_graphs/parsec_functional_tests_handle_malice_genesis_event_creator_not_genesis_member/: alice.dot
input_graphs/parsec_functional_tests_handle_malice_genesis_event_not_after_initial/: alice.dot
input_graphs/parsec_functional_tests_handle_malice_handle_fork/: bob.dot  dave.dot
input_graphs/parsec_functional_tests_handle_malice_invalid_accusation/: alice.dot  carol.dot
input_graphs/parsec_functional_tests_handle_malice_invalid_gossip_creator/: alice.dot  bob.dot
input_graphs/parsec_functional_tests_handle_malice_stale_other_parent/: alice.dot  carol.dot
input_graphs/parsec_functional_tests_remove_peer/: remove_eric.dot
input_graphs/parsec_functional_tests_unpolled_and_unconsensused_observations/: alice.dot
input_graphs/parsec_tests_from_parsed_contents/: 0.dot  1.dot
src/: block.rs  dot_parser.rs  dump_graph.rs  dump_network.rs  error.rs  functional_tests.rs  hash.rs  id.rs  lib.rs  meta_vote.rs  mock.rs  network_event.rs  observation.rs  parsec.rs  peer_list.rs  peer_manager.rs  round_hash.rs  test_utils.rs  tests.rs  vote.rs
src/dev_utils/: dot_parser.rs  environment.rs  mod.rs  network.rs  peer.rs  record.rs  schedule.rs
src/dev_utils/proptest/: bounded.rs  environment.rs  mod.rs  schedule.rs
src/gossip/: cause.rs  content.rs  event.rs  event_hash.rs  graph.rs  messages.rs  mod.rs  packed_event.rs
src/gossip/graph/: ancestors.rs  event_index.rs  event_ref.rs  mod.rs
src/meta_voting/: bool_set.rs  counts.rs  elections.rs  meta_elections.rs  meta_event.rs  meta_vote.rs  meta_vote_counts.rs  mod.rs  vote.rs
tests/: integration_tests.rs
tests/utils/: environment.rs  id.rs  mod.rs  network.rs  peer.rs  schedule.rs  transaction.rs
tests/utils/proptest/: bounded.rs  environment.rs  mod.rs  schedule.rs
