[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Implementation of Protocol for Asynchronous, Reliable, Secure and Efficient Consensus"
documentation = "https://docs.rs/parsec"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "parsec"
readme = "README.md"
repository = "https://github.com/maidsafe/parsec"
version = "0.5.0"

[dependencies]
lazy_static = { version = "~1.0.1", optional = true }
log = "~0.3.8"
maidsafe_utilities = "~0.17.0"
quick-error = "~1.2.2"
rand = "~0.4.2"
serde = "~1.0.66"
serde_derive = "~1.0.66"
tiny-keccak = "~1.4.2"

[dev-dependencies]
clap = "~2.31.2"
criterion = "~0.2.5"
parsec_dev_utils = { path = "dev_utils" }
proptest = "~0.8.6"
unwrap = "~1.2.0"

[features]
dump-graphs = ["lazy_static", "parsec_dev_utils/dump-graphs"]
testing = ["maidsafe_utilities/testing"]

[[bench]]
name = "bench"
harness = false
