[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Implementation of Protocol for Asynchronous, Reliable, Secure and Efficient Consensus"
documentation = "https://docs.rs/parsec"
exclude = ["input_graphs/*"]
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "parsec"
readme = "README.md"
repository = "https://github.com/maidsafe/parsec"
version = "0.5.0"

[dependencies]
lazy_static = "~1.0.1"
log = "~0.3.8"
maidsafe_utilities = "~0.17.0"
proptest = "~0.8.6"
quick-error = "~1.2.2"
rand = "~0.4.2"
serde = "~1.0.66"
serde_derive = "~1.0.66"
tiny-keccak = "~1.4.2"
unwrap = "~1.2.0"
safe_crypto = "0.4.0"

[dev-dependencies]
clap = "~2.31.2"
criterion = "~0.2.5"
pom = "1.1"

[features]
dump-graphs = []
testing = ["maidsafe_utilities/testing"]
default = ["safe_crypto/mock"]

[[bench]]
name = "bench"
harness = false
